# advent-of-code-2025-cpp

./: CMakeLists.txt  README.md
cmake/: CompileOptions.cmake
include/: aoc.hpp
src/: template.cpp
src/common/: aoc.cpp
src/days/: day01.cpp  day02.cpp  day03.cpp  day04.cpp  day05.cpp  day06.cpp  day07.cpp  day08.cpp  day09.cpp  day10-part2.py  day10.cpp  day11.cpp  day12.cpp
